--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "devextreme": "^21.1.5",
     "devextreme-angular": "^21.1.5",
     "devextreme-schematics": "^1.2.21",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
